video poster added

--- a/index.html
+++ b/index.html
@@ -1596,9 +1596,6 @@ html {
   background-color: #9e4ea9;
   padding: 10px 0;
 }
-#es-allegra.es-allegra .es-video__iframe {
-  min-height: 220px;
-}
 
 @media (min-width: 700px) {
   #es-allegra.es-allegra {
@@ -1845,8 +1842,7 @@ html {
     font-size: 18px;
   }
   #es-allegra.es-allegra .es-video__iframe {
-    min-height: 260px;
-    padding: 10px 0;
+    padding: 30px 0;
   }
 }
 @media (min-width: 900px) {
@@ -1963,12 +1959,9 @@ html {
   font-size: 14px;
   font-family: "Nexa-Book";
 }
-#es-allegra.es-allegra .es-video__iframe {
-    min-height: 370px;
-  }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 420px) {
   #es-allegra.es-allegra .es-kv__subtitle {
     width: 80%;
   }
@@ -2305,7 +2298,7 @@ html {
                 </div>
 
                 <div class="es-video">
-                  <video class="es-video__iframe" width="100%" height="auto" poster="images/poster.webp" controls>
+                  <video class="es-video__iframe" width="100%" height="auto" poster="./img/video.webp" controls>
                     <source src="./img/allegra.mp4" type="video/mp4">
                   </video>
                 </div>    
