--- a/index.html
+++ b/index.html
@@ -757,6 +757,7 @@ html {
   justify-content: space-between;
 }
 #es-allegra.es-allegra .es-kv__title {
+  padding: 0;
   text-transform: uppercase;
   font-size: 24px;
   margin-top: 60px;
@@ -847,6 +848,7 @@ html {
   box-shadow: inset -3px 0px 24px -12px rgb(17, 17, 17);
 }
 #es-allegra.es-allegra .es-about {
+  padding: 20px 0;
   margin: 10px;
   background-color: #853a92;
 }
@@ -856,10 +858,12 @@ html {
   align-items: center;
 }
 #es-allegra.es-allegra .es-about__title {
+  padding: 0;
   text-transform: uppercase;
   font-family: "Nexa-Heavy";
   font-size: 20px;
   line-height: 1.2;
+  margin: 20px 0;
 }
 #es-allegra.es-allegra .es-about__titleImg {
   max-width: 150px;
@@ -922,11 +926,13 @@ html {
   padding: 20px 0;
 }
 #es-allegra.es-allegra .es-symptoms__title {
+  padding: 0;
   text-transform: uppercase;
   font-family: "Nexa-Heavy";
   font-size: 20px;
   text-align: center;
   line-height: 1.2;
+  margin: 20px 0;
 }
 #es-allegra.es-allegra .es-symptoms__iconsCtn {
   display: flex;
@@ -1005,10 +1011,12 @@ html {
   line-height: 1.2;
 }
 #es-allegra.es-allegra .es-doze__title {
+  padding: 0;
   text-transform: uppercase;
   font-family: "Nexa-Heavy";
   font-size: 20px;
   text-align: center;
+  margin: 20px 0;
 }
 #es-allegra.es-allegra .es-doze__iconsCtn {
   display: flex;
@@ -1059,6 +1067,7 @@ html {
   padding-bottom: 0;
 }
 #es-allegra.es-allegra .es-season__title {
+  padding: 0;
   text-transform: uppercase;
   font-family: "Nexa-Heavy";
   font-size: 20px;
@@ -1371,6 +1380,7 @@ html {
   padding: 20px 0 0 0;
 }
 #es-allegra.es-allegra .es-calendar__title {
+  padding: 0;
   text-transform: uppercase;
   font-family: "Nexa-Heavy";
   font-size: 20px;
@@ -1471,6 +1481,7 @@ html {
   padding: 20px 0;
 }
 #es-allegra.es-allegra .es-ingr__title {
+  padding: 0;
   text-transform: uppercase;
   font-family: "Nexa-Heavy";
   font-size: 20px;
@@ -1510,9 +1521,10 @@ html {
   gap: 16px;
 }
 #es-allegra.es-allegra .es-month__title {
+  padding: 0;
   font-family: "Nexa-Heavy";
   font-size: 20px;
-  margin: 16px 0;
+  margin: 20px 0;
   line-height: 1;
 }
 #es-allegra.es-allegra .es-month__title--2 {
