--- a/index.html
+++ b/index.html
@@ -1855,6 +1855,9 @@ html {
   #es-allegra.es-allegra .es-video__iframe {
     padding: 30px 0;
   }
+  #es-allegra.es-allegra .es-about__desc--2 {
+    margin-top: 0;
+  }
 }
 @media (min-width: 900px) {
   #es-allegra.es-allegra {
@@ -2161,7 +2164,7 @@ html {
                       </div>
                       <div class="es-about__textCtn">
                           <p class="es-about__subtitle">bez zaburzeń <br> koncentracji</p>
-                          <p class="es-about__desc">
+                          <p class="es-about__desc es-about__desc--2">
                               – aby wrócić do swoich <br> zadań codziennych<sup>5</sup>
                           </p>
                       </div>
