dose width changed

--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@ html {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  max-width: 80%;
+  max-width: 270px;
   margin: 0 auto;
 }
 #es-allegra.es-allegra .es-doze__text {
@@ -1749,6 +1749,9 @@ html {
   #es-allegra.es-allegra .es-doze__claim {
     font-size: 18px;
   }
+  #es-allegra.es-allegra .es-doze__textCtn {
+    max-width: 325px;
+  }
   #es-allegra.es-allegra .es-season {
     margin: 40px;
     background-color: #853a92;
@@ -1947,6 +1950,9 @@ html {
 #es-allegra.es-allegra .es-symptoms__listItem {
   font-size: 12px;
 }
+#es-allegra.es-allegra .es-doze__textCtn {
+    max-width: 80%;
+  }
 #es-allegra.es-allegra .es-doze__text {
   font-size: 16px;
   margin: 0 2px;
@@ -2227,7 +2233,7 @@ html {
                       </div>
                       <div class="es-doze__textCtn">
                           <p class="es-doze__text">
-                              Zalecana dawka dla osób dorosłych oraz dzieci w wieku 12 lat
+                              Zalecana dawka dla osób dorosłych oraz dzieci w&nbsp;wieku 12&nbsp;lat
                           </p>
                           <p class="es-doze__text">
                               i starszych to
@@ -2305,7 +2311,7 @@ html {
                   </p>
                   <p class="es-season__contentDesc">
                       O wiele łatwiej jest zapobiec reakcji alergicznej na wczesnym etapie,
-                      niż zatrzymać ją w trakcie nasilenia pylenia.
+                      niż zatrzymać ją w&nbsp;trakcie nasilenia pylenia.
                   </p>
               </div>
 
@@ -2347,7 +2353,7 @@ html {
 
           <div class="es-calendar" id="alergia-kalendarz">
               <p class="es-calendar__title">
-                  kalendarz pylenia <br> roślin w Polsce<sup>6</sup>
+                  kalendarz pylenia <br> roślin w&nbsp;Polsce<sup>6</sup>
               </p>
               <!-- <p class="es-calendar__subtitle">
                   Zapoznaj się z poniższym kalendarzem i śledź okresy 
@@ -2384,7 +2390,7 @@ html {
                       </div>
                       <div class="es-calendar__legendSingle">
                           <p class="es-calendar__legendText es-calendar__legendText--small">
-                              Kalendarz pylenia roślin w Polsce dla Regionu I - 
+                              Kalendarz pylenia roślin w&nbsp;Polsce dla Regionu I - 
                               patrz mapa i Pozostałe regiony www.alergen.info.pl
                           </p>
                       </div>
@@ -2462,7 +2468,7 @@ html {
         <p class="es-footer__warning">
           To jest lek. Dla bezpieczeństwa stosuj go zgodnie z&nbsp;ulotką dołączoną do opakowania. <br>
           Nie przekraczaj maksymalnej dawki leku. <br>
-          W przypadku wątpliwości skonsultuj się z&nbsp;lekarzem lub farmaceutą.
+          W&nbsp;przypadku wątpliwości skonsultuj się z&nbsp;lekarzem lub farmaceutą.
         </p>
       </div>
     </div>
