cross-sell link fixed

--- a/index.html
+++ b/index.html
@@ -2425,7 +2425,7 @@ html {
             </div>
             <div class="es-month__wrapper">
                 <img src="./img/month-pack.webp" loading="lazy" alt="Wielopak Allegra" class="es-month__img">
-                <a data-href="https://www.apteka-melissa.pl/produkt/allegra-120-mg-3-x-10-tabletek-lek-na-alergie-i-katar-sienny-cena-opinie-dawkowanie,61946.html" target="_blank" class="es-month__link">SPRAWDŹ ></a>
+                <a href="https://www.apteka-melissa.pl/produkt/allegra-120-mg-3-x-10-tabletek-lek-na-alergie-i-katar-sienny-cena-opinie-dawkowanie,61946.html" target="_blank" class="es-month__link">SPRAWDŹ ></a>
             </div>
         </div>
       </div>
